unpackaged/main/default/objects/Subscription__c/fields/AgeMonths__c.field-meta.xml
<CustomField>
    <fullName>AgeMonths__c</fullName>
    <formula>FLOOR((TODAY() - StartDate__c) / 30.5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>