unpackaged/main/default/objects/Subscription__c/fields/BuyPrice__c.field-meta.xml
<CustomField>
    <fullName>BuyPrice__c</fullName>
    <label>Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>