unpackaged/main/default/objects/Subscription__c/fields/DaysRemaining__c.field-meta.xml
<CustomField>
    <fullName>DaysRemaining__c</fullName>
    <formula>RenewalDate2__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>