unpackaged/main/default/objects/Subscription__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>