unpackaged/main/default/objects/Subscription__c/fields/Product_Website__c.field-meta.xml
<CustomField>
    <fullName>Product_Website__c</fullName>
    <formula>Product__r.Majenta_Shop_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Website</label>
    <type>Text</type>
</CustomField>