unpackaged/main/default/objects/Subscription__c/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Opportunity</label>
    <type>Checkbox</type>
</CustomField>