unpackaged/main/default/objects/Subscription__c/fields/RenewalDate2__c.field-meta.xml
<CustomField>
    <fullName>RenewalDate2__c</fullName>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>