unpackaged/main/default/objects/Subscription__c/fields/RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalDate__c</fullName>
    <formula>DATE(
  YEAR(StartDate__c+(((FLOOR(AgeMonths__c/Length__c)*Length__c)+Length__c)*30.5)),
  MONTH(StartDate__c+(((FLOOR(AgeMonths__c/Length__c)*Length__c)+Length__c)*30.5)),
  DAY(StartDate__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date (Formula)</label>
    <type>Date</type>
</CustomField>