unpackaged/main/default/objects/Subscription__c/fields/TotalBuyPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyPrice__c</fullName>
    <formula>Quantity__c * BuyPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>