unpackaged/main/default/objects/Subscription__c/fields/TotalSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesPrice__c</fullName>
    <formula>Quantity__c * UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>