unpackaged/main/default/objects/Subscription__c/listViews/AllSubscriptions.listView-meta.xml
<ListView>
    <fullName>AllSubscriptions</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>StartDate__c</columns>
    <columns>RenewalDate2__c</columns>
    <columns>Length__c</columns>
    <columns>Status__c</columns>
    <columns>TotalBuyPrice__c</columns>
    <columns>TotalSalesPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Subscriptions</label>
</ListView>